--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
   },
@@ -16,6 +18,8 @@
     "@tailwindcss/vite": "^4.1.7",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.7"
   }
 }
